added germnay, belgium and england

--- a/countries/germany/style.css
+++ b/countries/germany/style.css
@@ -21,21 +21,17 @@ body {
     border-style: solid;
 }
 
-.white {
-    background-color: white;
+.black {
+    height: 100px;
+    background-color: black;
 }
 
-.crossred1 {
-    background-color: rgb(240, 2, 2);
-    height: 70px;
-    margin: auto;
-    margin-top: 110px;
+.red {
+    height: 100px;
+    background-color: red;
 }
 
-.crossred2 {
-    background-color: rgb(240, 2, 2);
-    height: 300px;
-    width: 70px;
-    margin: auto;
-    margin-top: -180px;
+.yellow {
+    height: 100px;
+    background-color: yellow;
 }
