--- a/countries/belgium/style.css
+++ b/countries/belgium/style.css
@@ -1,3 +1,5 @@
+
+
 body {
     padding: auto;
 }
@@ -5,4 +7,38 @@ body {
 #titulo {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-align: center;
+}
+
+.wrapper {
+    display: flex;
+}
+
+.flag {
+    width: 600px;
+    height: 300px;
+    box-shadow: 0px 0px 100px 1px rgb(145, 128, 145);
+    background-color: transparent;
+    position: relative;
+    margin: 200px auto;
+    border-style: solid;
+}
+
+.black {
+    width: 200px;
+    height: 300px;
+    background-color: black;
+}
+
+.yellow {
+    height: 300px;
+    width: 200px;
+    margin-left: 200px;
+    background-color: #eecb04;
+}
+
+.red {
+    height: 300px;
+    width: 200px;
+    margin-left: 200px;
+    background-color: rgb(235, 0, 0);
 }
