--- a/countries/azerbaijan/style.css
+++ b/countries/azerbaijan/style.css
@@ -14,38 +14,24 @@ body {
 .flag {
     width: 600px;
     height: 300px;
-    position: relative;
     box-shadow: 0px 0px 100px 1px rgb(145, 128, 145);
     background-color: transparent;
+    position: relative;
     margin: 200px auto;
     border-style: solid;
-
 }
 
- .red {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    background-color: red;
-    top: 0;
-    left: 0;
-} 
-
- .crosswhite1 {
-    z-index: 1;
-    background-color: white;
-    width: 40%;
-    height: 20%;
-    margin-left: 30%;
-    margin-top: 20%;
+.blue {
+    height: 100px;
+    background-color: rgb(11, 182, 224);
 }
 
- .crosswhite2 {
-    z-index: 1;
-    background-color: white;
-    width: 10%;
-    height: 75%;
-    margin-left: 45%;   
-    margin-top: 6%;
-}   
+.red {
+    height: 100px;
+    background-color: rgb(240, 6, 6);
+}
 
+.green {
+    height: 100px;
+    background-color: rgba(7, 124, 7, 0.705);
+}
