--- a/countries/ukraine/style.css
+++ b/countries/ukraine/style.css
@@ -14,38 +14,20 @@ body {
 .flag {
     width: 600px;
     height: 300px;
-    position: relative;
     box-shadow: 0px 0px 100px 1px rgb(145, 128, 145);
     background-color: transparent;
+    position: relative;
     margin: 200px auto;
     border-style: solid;
-
 }
 
- .red {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    background-color: red;
-    top: 0;
-    left: 0;
-} 
-
- .crosswhite1 {
-    z-index: 1;
-    background-color: white;
-    width: 40%;
-    height: 20%;
-    margin-left: 30%;
-    margin-top: 20%;
+.blue {
+    height: 50%;
+    background-color: blue;
 }
 
- .crosswhite2 {
-    z-index: 1;
-    background-color: white;
-    width: 10%;
-    height: 75%;
-    margin-left: 45%;   
-    margin-top: 6%;
-}   
 
+.yellow {
+    height: 50%;
+    background-color: #e2c719e1;
+}
