--- a/countries/azerbaijan/style.css
+++ b/countries/azerbaijan/style.css
@@ -35,3 +35,11 @@ body {
     height: 100px;
     background-color: rgba(7, 124, 7, 0.705);
 }
+
+.moon {
+    width: 100px;
+    height: 80px;
+    
+    border-radius: 50%;
+    box-shadow: 15px 15px 0 0 black;
+  }
